--- a/views/home.pug
+++ b/views/home.pug
@@ -3,10 +3,10 @@ include mixins/videoBlock
 
 block content
     .home-videos
-        each item in videos
+        each item in videos 
             +videoBlock({
                 id:item.id,
                 title:item.title,
                 views:item.views,
-                videoFile:item.videoFile
+                videoFile:item.fileUrl
             })
