--- a/views/search.pug
+++ b/views/search.pug
@@ -5,7 +5,7 @@ block content
     .search__header
         h3 Searching for: #{searchingBy}
     .search__videos
-        if video.length === 0
+        if videos.length === 0
             h5 No Videos Found
         each item in videos
             +videoBlock({
